<resources>
    <string name="app_name">G8s21Navigetor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calculadora</string>
    <string name="nav_header_subtitle">Miguel Jimenez Morales</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_sumar">Suma 2 num</string>
    <string name="menu_restar">Resta 2 num</string>
    <string name="menu_multiplicar">Multiplica 2 num</string>
    <string name="menu_dividir">Divide 2 num</string>
    <string name="TituloSumar">Sumar dos numeros</string>
    <string name="TituloRestar">Resta dos numeros</string>
    <string name="TituloMultiplicacion">Multiplica dos numeros</string>
    <string name="TituloDivision">Divide dos numeros</string>
    <string name="primernumero">Primer Numero</string>
    <string name="segundonumero">Segundo Numero</string>
</resources>